add count, remove unused fields
